# dotfiles

./: .gitignore
.scripts/: battery-check.sh  gamerunner  lid-close.sh  ntfy-open-in-mpv.sh  steam-wrapper.sh
.scripts/rust/gamerunner/: Cargo.toml
.scripts/rust/gamerunner/src/: cli.rs  main.rs  wlr_randr.rs
dotfiles/fish/.config/fish/: fish_variables
dotfiles/fish/.config/fish/conf.d/: 01-env-variables.fish  02-session-aliases.fish  99-interactive-foot_integration.fish  99-interactive.fish
dotfiles/foot/.config/foot/: foot.ini
dotfiles/git/.config/git/: aliases  config
dotfiles/mako/.config/mako/: config
dotfiles/niri/.config/niri/: config.kdl
dotfiles/nvim/.config/nvim/: lazy-lock.json
dotfiles/nvim/.config/nvim/lua/: community.lua  polish.lua
dotfiles/nvim/.config/nvim/lua/plugins/: astrolsp.lua  astroui.lua  obsidian.lua  treesitter.lua
dotfiles/waybar/.config/waybar/: config  modules.jsonc  style.css
