[package]
name = "gamerunner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6.5"
dwarfs = "0.2.1"
eyre = "0.6.12"
itertools = "0.14.0"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sys-mount = "3.0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
which = "8.0.0"
